alignment issue on music.html

--- a/project3/style.css
+++ b/project3/style.css
@@ -13,7 +13,7 @@ body {
    Wrapper / Content Container
    ========================= */
 .wrapper {
-  max-width: 800px;
+  max-width: 1100px;
   margin: 0 auto;
   padding-right: 120px;
   padding-left: 120px;
